2010-12-19 Malignant Manor <malignantmanor@users.sourceforge.net>
	* charmDifficulty hard setting changes
	* keys.*: Separate keys allowed when Avatar is charmed
	* exult.cc: Allow paused_combat_select to work again when the Avatar
	is charmed (for uncharmed party members)
	* gamewin.cc: Charmed party members stay in combat mode

2010-12-18 Malignant Manor <malignantmanor@users.sourceforge.net>
	* charmDifficulty: Stop actor movement when charmed. Exult.cc,
		gamewin.*, keys.cc:
	* actors.cc: Combat is toggled if a party member gets charmed.

2010-12-17 Malignant Manor <malignantmanor@users.sourceforge.net>
	* add can_act_charmed and made checks use it
	* keyactions.cc: fix inventory skip bug introduced in 6571

2010-12-17 Malignant Manor <malignantmanor@users.sourceforge.net>
	* charmDifficulty: Space pauses excluded for charmed party members
	* Fixed space pauses failed read caused by last revision

2010-12-17 Malignant Manor <malignantmanor@users.sourceforge.net>
	* Added charm difficulty to combat options gump.
		gumps/CombatOptions_gump.*
	* Indenting: gamemgr/sigame.cc

2010-12-17 Malignant Manor <malignantmanor@users.sourceforge.net>
	* Added an option to make charmed more difficult.
		actors.cc, combat.cc, combat_opts.h, gamewin.cc,
		keyactions.cc, gumps/Face_stats.cc: It currently blocks
		inventory access to charmed party members and you cannot
		talk to charmed npcs through doubleclick event.

		'config/gameplay/combat/charmDifficulty' option is hard or
		normal with hard having these restrictions. Default is normal

2010-12-16 Malignant Manor <malignantmanor@users.sourceforge.net>
	*combat.cc: fix (hopefully) find_opponent bugs not fixed
		properly in 6557 and 6558.

2010-12-16 Malignant Manor <malignantmanor@users.sourceforge.net>
	*gumps/CombatStats_gump.cc, gumps/Paperdoll_gump.cc, gumps/Stats_gump.cc: Added Oink!
	text when failed copy protection flag is set

2010-12-16 Malignant Manor <malignantmanor@users.sourceforge.net>